# cleanup_block_storage_idle

./: .gitignore  Dockerfile  README.md  delete_ebs_noAttached.py  estimate_ebs_noAttached.py  main.py  pyproject.toml
.github/workflows/: destroy-infra.yml  main.yml
iac/: README.md  main.tf  providers.tf  variables.tf
iac/modules/lambda_s3_sns/: main.tf  outputs.tf  variables.tf
